# Oxygen

./: anti.json  config.json  events.json  info.json  logs.json  main.py  pyproject.toml  requirements.txt
cogs/commands/: Games.py  anti.py  extra.py  fun.py  general.py  giveaway.py  help.py  ignore.py  logging.py  moderation.py  music.py  nsfw.py  owner.py  raidmode.py  ticket.py  vanityroles.py  vcrole.py  vcroles.py  welcome.py
cogs/events/: Errors.py  antiban.py  antibot.py  antichannel.py  antiemojid.py  antiemojiu.py  antiemostick.py  antiguild.py  antikick.py  antintegration.py  antiping.py  antiprune.py  antirole.py  antispam.py  antiwebhook.py  autoblacklist.py  autorole.py  greet2.py  on_guild.py  voiceupdate.py
core/: Astroz.py
utils/: Tools.py  config.py  help.py  paginators.py
