[tool.poetry]
name = "Oxygen"
version = "0.1.0"
description = "Keep Trying Yourself"
authors = ["Rawknee.69"]

[tool.poetry.dependencies]
py-cord 
jishaku = "2.5.1"
discord = "^2.3.2"
aiohttp = "3.8.3"
psutil = "5.9.2"
httpx = "0.23.0"
Flask = "^2.2.2"
motor = "^3.1.1"
pymongo = "^4.3.2"
requests = "^2.28.1"
async-timeout = "^4.0.2"
wavelink = "^1.3.3"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
